--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <a class="nav-link link text-black display-4" href="club.html#footer1-l" aria-expanded="false">Контакти</a>
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="tel:0800211980"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn"></span>
-                    0 800 21 19 80</a></div>
+                    0800211980</a></div>
         </div>
     </nav>
 </section>
@@ -66,7 +66,7 @@
         <div class="media-container-column" data-form-type="formoid">
             <div data-form-alert="" hidden="" class="align-center">Дякуємо за цікавість до наших сервісів.
 Незабаром наша підтримка зв'яжеться з вами.</div>
-            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="uuV3s0mWBTa331uX2dwEa1H6PCy0XhAHOWKZT04Nm6op1S1Dg4Wlgz0aDA6+BZHCtt9vIQMVrCuNj7SiF8hBFh5+D7OxK3f7Bk+zHBIlEISW7pxc/rY4vU4FlUBIkoV2">
+            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Nextbike Site Form"><input type="hidden" data-form-email="true" value="uuV3s0mWBTa331uX2dwEa1H6PCy0XhAHOWKZT04Nm6op1S1Dg4Wlgz0aDA6+BZHCtt9vIQMVrCuNj7SiF8hBFh5+D7OxK3f7Bk+zHBIlEISW7pxc/rY4vU4FlUBIkoV2">
                 <div data-for="name">
                     <div class="form-group">
                         <input type="text" class="form-control px-3" name="name" data-form-field="Name" placeholder="Ім'я" required="" id="name-header15-5">
@@ -308,7 +308,7 @@
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="https://nextbike.org.ua">
-                        <img src="assets/images/nextbike-logo-circle1-1857x18571-1857x1857.png" alt="Mobirise" title="" media-simple="true">
+                        <img src="assets/images/nextbike-logo-circle1-1857x18571-1857x1857.png" alt="Nextbike" title="" media-simple="true">
                     </a>
                 </div>
             </div>
