--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <a class="nav-link link text-black display-4" href="index.html#features14-6">&nbsp; Послуги</a>
                 </li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#pricing-tables2-7">Ціни</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="club.html">Клуб</a></li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link link text-black display-4" href="club.html#footer1-l" aria-expanded="false">Контакти</a>
+                    <a class="nav-link link text-black display-4" href="#footer1-d" aria-expanded="false">Контакти</a>
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="tel:0800211980"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn"></span>
                     0800211980</a></div>
@@ -171,7 +171,7 @@
                             <li class="list-group-item">за райд,<br><span style="background-color: transparent; font-size: 1rem;">наступна година 20 грн</span></li>
                         </ul>
                     </div>
-                    <div class="mbr-section-btn text-center py-4 pb-5"><a href="tel:0 800 21 19 80" class="btn btn-primary display-4">Замовити</a></div>
+                    <div class="mbr-section-btn text-center py-4 pb-5"><a href="tel:0800211980" class="btn btn-primary display-4">Замовити</a></div>
                 </div>
             </div>
             <div class="plan col-12 mx-2 my-2 justify-content-center col-lg-4">
@@ -190,7 +190,8 @@
                             <li class="list-group-item">Безкоштовні щоденні райди до 30 хвилин<br><br></li>
                         </ul>
                     </div>
-                    <div class="mbr-section-btn text-center py-4 pb-5"><a href="tel:0 800 21 19 80" class="btn btn-primary display-4">Замовити</a></div>
+                    <div class="mbr-section-btn text-center py-4 pb-5"><a href="tel:0800211980" class="btn btn-primary display-4">
+                      </a></div>
                 </div>
             </div>
 
@@ -322,7 +323,7 @@
                 <h5 class="pb-3">
                     Контакти</h5>
                 <p class="mbr-text">
-                    Email: <a href="mailto:info@nextbike.com.ua" class="text-white">info@nextbike.com.ua</a>                    <br>Phone: <a href="tel:0 800 21 19 80" class="text-white">0 800 21 1980</a><br></p>
+                    Email: <a href="mailto:info@nextbike.com.ua" class="text-white">info@nextbike.com.ua</a>                    <br>Phone: <a href="tel:0800211980" class="text-white">0 800 21 1980</a><br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">Інформація</h5>
