--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <a class="nav-link link text-black display-4" href="index.html#features14-6">&nbsp; Послуги</a>
                 </li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#pricing-tables2-7">Ціни</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="club.html">Клуб</a></li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link link text-black display-4" href="#footer1-d" aria-expanded="false">Контакти</a>
+                    <a class="nav-link link text-black display-4" href="index.html#footer1-d" aria-expanded="false">Контакти</a>
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="tel:0800211980"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn"></span>
                     0800211980</a></div>
