--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                             <li class="list-group-item">Безкоштовні щоденні райди до 30 хвилин<br><br></li>
                         </ul>
                     </div>
-                    <div class="mbr-section-btn text-center py-4 pb-5"><a href="tel:0800211980" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center py-4 pb-5"><a href="tel:0800211980" class="btn btn-primary display-4">Замовити
                       </a></div>
                 </div>
             </div>
